--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div id="click-counter">0</div>
       <p>I'm Learning</p>
-      <button id="click-button">Click</button>
+      <button id="click-button">Click Me!</button>
     </div>
   </body>
 </html>
